# bhive

./: .gitignore  Cargo.toml  DEVELOPMENT.md  PROJECT_AWARE_API.md  README.md  STATUS.md
crates/ant-army-api/: Cargo.toml
crates/ant-army-api/src/: extractors.rs  handlers.rs  main.rs  state.rs
crates/ant-army-cli/: Cargo.toml
crates/ant-army-cli/src/: client.rs  main.rs
crates/ant-army-cli/src/commands/: init.rs  mod.rs  project.rs  queen.rs  task.rs  worker.rs
crates/ant-army-core/: Cargo.toml
crates/ant-army-core/migrations/: 20240101000000_initial_schema.sql  README.md
crates/ant-army-core/resources/: names.toml
crates/ant-army-core/src/: error.rs  lib.rs  naming.rs  provider.rs  task.rs  types.rs  worker.rs
crates/ant-army-core/src/coordination/: coordinator.rs  mod.rs  notifications.rs  types.rs
crates/ant-army-core/src/project/: config.rs  registry.rs
crates/ant-army-queen/: Cargo.toml
crates/ant-army-queen/src/: config.rs  lib.rs  pool.rs  queen.rs
crates/ant-army-worker/: Cargo.toml
crates/ant-army-worker/src/: lib.rs
crates/bhive-api/: Cargo.toml
crates/bhive-api/src/: extractors.rs  handlers.rs  main.rs  state.rs
crates/bhive-cli/: Cargo.toml
crates/bhive-cli/src/: client.rs  main.rs
crates/bhive-cli/src/commands/: init.rs  mod.rs  project.rs  task.rs
crates/bhive-core/: Cargo.toml
crates/bhive-core/migrations/: 20240101000000_initial_schema.sql  README.md
crates/bhive-core/resources/: names.toml
crates/bhive-core/src/: error.rs  lib.rs  naming.rs  task.rs  types.rs  worker.rs  workspace.rs
crates/bhive-core/src/coordination/: coordinator.rs  mod.rs  notifications.rs  types.rs
crates/bhive-core/src/project/: config.rs  mod.rs  registry.rs
crates/bhive-queen/: Cargo.toml
crates/bhive-queen/src/: config.rs  lib.rs  pool.rs  queen.rs
crates/bhive-worker/: Cargo.toml
crates/bhive-worker/src/: context.rs  executor.rs  lib.rs
docker/: .env.example  Dockerfile.api  README.md  docker-compose.yml  init-db.sh
docker/migrations/: .gitkeep
docs/: ARCHITECTURE.md  COORDINATION_LAYER.md  COORDINATION_LAYER_RUST.md  HEADLESS_ARCHITECTURE.md  IMPLEMENTATION_PHASE_1.md  PRD.md  README.md  SETUP_TOOL_PRD.md  TUI_PLAN.md  semantic-tools-design.md
docs/adr/: 001-move-off-opencode.md  002-queen-in-api-service.md  003-queen-assigns-tasks.md  004-workers-as-tokio-tasks.md
docs/ant-army/: PRD-QUEEN-WORKERS.md
docs/bhive/: PRD-QUEEN-WORKERS.md
docs/guides/: opencode-custom-provider-guide.md
docs/research/: advanced-llm-techniques-2025-2026.md  architecture-alternatives-analysis.md  argus-token-aware-routing.md  engram.md  ephemeral-queen-pattern.md  learned-capabilities-system.md  legomem-analysis.md  observability-architecture.md  opencode-fork-integration-strategy.md  opencode-integration-analysis.md  prompt-compression-analysis.md  quality-assurance-strategy.md  ralph-wiggum-loop.md  recursive-language-models.md  research-log.md  routine-framework-analysis.md  speculative-decoding-analysis.md  task-coordination-architecture.md  tiny-recursive-models.md
