[package]
name = "ant-army-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "ant-army"
path = "src/main.rs"

[dependencies]
ant-army-core = { path = "../ant-army-core" }

tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json"] }
