[package]
name = "ant-army-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

# Configuration
toml = "0.8"
dirs = "5.0"
rand = { workspace = true }

# Agent framework (TODO: enable when ready)
# rig-core = { workspace = true }

# Multi-provider LLM (TODO: enable when ready)
# genai = { workspace = true }
