[package]
name = "ant-army-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ant-army-core = { path = "../ant-army-core" }

tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# TODO: Add rig-core and genai when implementing
