[package]
name = "bhive-queen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bhive-core = { path = "../bhive-core" }
bhive-worker = { path = "../bhive-worker" }

tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Async trait support
async-trait = "0.1"

# TODO: Add rig-core and genai when implementing
