[package]
name = "bhive-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
bhive-core = { path = "../bhive-core" }

tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# TODO: Add rig-core and genai when implementing
